# AISLENS

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: DRAFT_DEPENDENCE_TESTING_GUIDE.md  PERMISSIVE_PARAMETERS_GUIDE.md  README.md  README_PARAMETER_TESTING.md  env.yaml
notebooks/: 00-sm-SCRATCH.ipynb  00-sm-synthetic-basal-melt-dataset.ipynb  00-synthetic-basal-melt-dataset.ipynb  01-AIS-basal-melt-modern-sat-observations-analysis.ipynb  01-AIS-basal-melt-modern-sat-observations-data-preprocessing.ipynb  01-sm-AIS-basal-melt-modern-sat-observations-analysis.ipynb  01-sm-AIS-sat-obs.ipynb  02-AIS-basal-melt-ocean-model-output-analysis.ipynb  02-AIS-basal-melt-ocean-model-output-data-preprocessing.ipynb  02-sm-AIS-basal-melt-ocean-model-output-analysis.ipynb  02-sm-AIS-basal-melt-ocean-model-output-data-preprocessing.ipynb  04-AIS-MALI-output-analysis.ipynb  04-sm-AIS-MALI-output-analysis.ipynb  05-AIS-MALI-simulations.ipynb  06-AIS-variability-extrapolation.ipynb  06-sm-AIS-variability-extrapolation.ipynb  07-climate-model-forcings.ipynb  07-sm-climate-model-forcings.ipynb  08-ISMIP6-MALI-forcings.ipynb  MALI-ISMIP6-BASINS.ipynb  _MASTER.ipynb  calc-dd-comprehensive.ipynb  calculate-draft-dependence.ipynb  draft-dependence-params.ipynb  draft-dependence-tester.ipynb  generate-basal-melt-anomaly-forcings.ipynb  generate-forcings.ipynb  mali-diagnostics.ipynb  mali-draft-diagnostics.ipynb  prepare-data.ipynb
scripts/: generate_forcings.py  regrid_to_mpas.py
setup/: build.sh  config.yaml  modules.yaml
src/: README.md  ais-map.R  create_forcings.py  (+27 more)
(+103 files in other folders)
