[project]
name = "aislens"
version = "0.1.0"
description = "Antarctic Ice Sheet Large Ensemble"
readme = "README.md"
license = "MIT"  
authors = [
    {name = "Shivaprakash Muruganandham", email = "smurugan9@gatech.edu"}
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aislens"]  # Explicitly specify the package directory
package-dir = {"" = "src"} # src-layout
